--- a/src/pages/installation/smf_create_system.html
+++ b/src/pages/installation/smf_create_system.html
@@ -20,7 +20,7 @@ install: smf
 </dl>
 
 <p>Systems are comprised of a System Test Account and a System Production Account. Systems 
-    contain one or more Serverless Stacks and these are created in Step 4 - Create Stack.    
+    contain one or more Serverless Stacks and these are configured in Step 4 - Configure Repo(s).    
 </p>
 
 <p>We recommend that you create an initial System called Tut (short for Tutorial) that can be used 
