--- a/src/pages/tutorial/tutorial_intro.html
+++ b/src/pages/tutorial/tutorial_intro.html
@@ -6,12 +6,15 @@ tutorial: Intro
 ---
 {{> tutorial_menu}}
 <div class=lz-r-content>
-    <h3>LazyStack Tutorials</h3>
-    <p>The LazyStack tutorials are robust and meant to touch on all the important aspects of building 
-        a real application stack and core components of a client application that 
-        calls that stack. We use the ubiquitous OpenApi PetStore sample specification with 
-        a few changes necessary to illustrate important AWS/LazyStack features.
+    <h3>LazyStack Tools Tutorials</h3>
+    <p>These tutorials introduce the LazyStack tools through the development of a robust 
+        serverless stack along with client application(s) that call that stack. We use the 
+        ubiquitous OpenApi PetStore sample specification with a few enhancements 
+        illustrating important AWS/LazyStack features.
     </p>
+    <p><strong>After completing one of these tutorials, you may consider running through the 
+        <a href="/tutorial/tutorial_smf_overview.html">Software Management Framework (SMF) Tutorial</a>.
+    </strong></p>
     <ul>
         <li><a href="/tutorial/tutorial_vswin_overview.html">Visual Studio Tutorial (Windows)</a></li>
         <li><a href="/tutorial/tutorial_vsmac_overview.html">Visual Studio Tutorial (Mac)</a></li>
