--- a/src/pages/tutorial/tutorial_smf_overview.html
+++ b/src/pages/tutorial/tutorial_smf_overview.html
@@ -7,18 +7,37 @@ tutorial: smf
 {{> tutorial_menu}}
 <div class=lz-r-content>
 <h3>Software Management Framework Tutorial</h3>
+<dl>
+  <dt>Prerequisites:</dt>
+  <dd>- SMF Install Steps 1 and 2 complete</dd>
+  <dd>- Developer Account Created</dd>
+  <dd>- Configure Developer Workstation Complete (using Developer Account information)</dd>
+   <dt>Estimated Time: 5 minutes</dt> 
+    <dt>Estimated Cost: none</dt> 
+  <dt>Some steps in this tutorial require access to Management Workstation</dt>
+  <dt>Some steps in this tutorial require access to Developer Workstation.</dt>
+</dl>  
 
+<p>In this system we are going to create a new System and add a stack to that system. To make things simple we are going 
+  to use the PetStore stack developed in the LazyStack Tutorial. During the SMF installation process, a Management 
+  Workstation was configured with access to the AWS Management account for an AWS Organization. In addition, individual 
+  "Developer AWS Accounts" were created for each developer.
+
+</p>
+<p>This tutorial requires access to the management workstation and developer workstation. If your workstation is not configured 
+  as both a management and developer workstation, then you will need to coordinate some steps in this tutorial with a 
+  team member that has access to a management workstation. 
+</p>
 <div class="manual-list">
   <ul>
     <li>1) Create a System - "Tut"</li>
-    <li>2) Create a simple Serverless Stack Solution - Stk1</li>
-    <li>3) Create Stk1 repository on GitHub</li>
-    <li>4) Install CI/CD</li>
-    <li>5) Start Feature Development</li>
-    <li>6) Create Pull Request</li>
-    <li>7) Update Pull Request</li>
-    <li>8) Merge Pull Request</li>
-    <li>9) Checkout Latest Main</li>
+    <li>2) Create PetStore repository on GitHub</li>
+    <li>3) Install CI/CD</li>
+    <li>4) Start Feature Development</li>
+    <li>5) Create Pull Request</li>
+    <li>6) Update Pull Request</li>
+    <li>7) Merge Pull Request</li>
+    <li>8) Checkout Latest Main</li>
   </ul>
 </div>
 
