--- a/src/pages/installation/smf_create_stack.html
+++ b/src/pages/installation/smf_create_stack.html
@@ -6,15 +6,15 @@ install: smf
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>SMF Step 4 - Create Stack</h4>
+    <h4>SMF Step 4 - Configure GitHub Repository</h4>
     <dl>
         <dt>Prerequisites: Create System (Step 3) complete</dt>
         <dt>Estimated Time: 2 minutes</dt>
         <dt>Estimated Cost: none</dt>
         <dt>Perform this step on the Management Workstation.</dt>
     </dl>
-    <p>In this step you create one or more Serverless Stacks for a System. Each 
-        stack has it's own GitHub repository.
+    <p>In this step you configure one or more GitHub Repositories for your system. Each 
+        repository defines a serverless stack.
     </p>
     <ul>
         <li>4.1 Create GitHub Repository for Serverless Stack</li>
