--- a/src/pages/installation/smf_prod_cd.html
+++ b/src/pages/installation/smf_prod_cd.html
@@ -6,7 +6,7 @@ install: smf
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>SMF 4.3 Setup Continuous Integration and Continuous Deployment for System Prod Account Stack</h4>
+    <h4>SMF 4.3 Configure Continuous Deployment for System Prod Account Stack</h4>
     <dl>
         <dt>Prerequisites:</dt>
         <dd>- Production Account Setup complete</dd>
@@ -27,25 +27,6 @@ install: smf
     <p>You repeat this step for each GitHub serverless application repository used in a Production System Account.</p>
 
     <ol>
-        <li>If you do not already have a CodeBuild GitHub Connection for the Prod Account, follow these steps to create
-            one:
-            <ol type="a">
-                <li>Log into the AWS OrgProd account using the OrgProd IAM User credentials.</li>
-                <li>Navigate to the <a href="https://console.aws.amazon.com/codesuite/codebuild/projects?" {{>newtab}}>CodeBuild</a> Console</li>
-                <li>Select Settings &rightarrow; Connections in navigation pane. The Developer Tools > Connections page appears.</li>                
-                <li>Click the Create Connection Button. The Create Connection page appears.</li>
-                <li>Select the GitHub radio button and enter a connection name.</li>
-                <li>Click on the Connect to GitHub button. You will be prompted to log into GitHub if you are not already logged in The Connect to GitHub page appears.</li>
-                <li>Click on the "Install a new app" button. The GitHub "Install AWS Connector for GitHub" page appears with a list of accounts you have access to. Select identity under which you have 
-                    access to the application repository used by this CI/CD setup. The AWS Connector for GitHub
-                    page appears.
-                </li>
-                <li>Use the options on the page to configure the connector's access to the repository.
-                </li>
-                <li>Click the Save button.</li>
-            </ol>
-        </li>
-        <br>
         <li>Open a PowerShell Terminal.</li>
         <li>CD into the OrgMgmt folder. Using your OrgCod in place of "Org"</li>
         <li>Execute the Prod_CodeBuild_Deploy.ps1 script. 
@@ -64,24 +45,24 @@ Note: Press return to accept a default values.
 Enter your OrgCode: Az
 Enter your AWS CLI Management Account Profile (default: AzMgmt):
 Enter Region (default us-east-1):
-Enter the SysCode (ex: Pet):
-Enter the System Production Account Name (default: AzPetProd):
-Enter the application stack's GitHub Repo URL (example: https://github.com/myorg/myrepo.git): https://github.com/myorg.petstore.git
-Enter your repo short name (default: petstore):
+Enter the SysCode (ex: Pet): Tut
+Enter the System Production Account Name (default: AzTutProd):
+Enter the application stack's GitHub Repo URL (example: https://github.com/myorg/myrepo.git): https://github.com/myorg.OrgDevJoePetStore.git
+Enter your repo short name (default: orgdevjoepetstore):
 Enter PR Merge template name (default Prod_CodeBuild_PR_Merge.yaml):
 Please Prod and confirm the following:
     OrgCode: Az 
-    SysCode: Pet
+    SysCode: Tut
     AWS CLI Management Account Profile: AzMgmt
     AWS Region: us-east-1
-    System Production Account name: AzPetMgmt
+    System Production Account name: AzTutMgmt
     GitHub Repo URL: https://github.com/myorg.petstore.git
-    Repo short name: petstore
-    CodeBuild PR Merge project stack name: petstore_pr_merge
+    Repo short name: orgdevjoepetstore
+    CodeBuild PR Merge project stack name: orgdevjoepetstore_pr_merge
     CodeBuild PR Merge project template: Prod_CodeBuild_PR_Merge.yaml
 Continue y/n y
 Processing Starting
-Deploying petstore_pr_merge AWS CodeBuild project to AzPetProd account.
+Deploying orgdevjoepetstore_pr_merge AWS CodeBuild project to AzPetProd account.
 Processing Complete</code></pre>
         </li>
     </ol>
