--- a/src/pages/tutorial/tutorial_smf_merge_pr.html
+++ b/src/pages/tutorial/tutorial_smf_merge_pr.html
@@ -6,7 +6,13 @@ tutorial: smf
 ---
 {{> tutorial_menu}}
 <div class=lz-r-content>
-<h3>Merge Pull Request</h3>
-
+<h3>5 Merge Pull Request</h3>
+<ol>
+    <li><strong>GitHub UI</strong>
+        <ol type="a">
+            <li></li>
+        </ol>
+    </li>
+</ol>
 
 </div> 
