--- a/src/pages/tutorial/tutorial_smf_update_pr.html
+++ b/src/pages/tutorial/tutorial_smf_update_pr.html
@@ -6,7 +6,18 @@ tutorial: smf
 ---
 {{> tutorial_menu}}
 <div class=lz-r-content>
-<h3>Update Pull Request</h3>
-
+<h3>4 Update Pull Request</h3>
+<ol>
+    <li><strong>Visual Studio IDE (Windows)</strong>
+        <ol type="a">
+            <li></li>
+        </ol>
+    </li>
+    <li><strong>GitHub UI</strong>
+        <ol type="a">
+            <li></li>
+        </ol>
+    </li>
+</ol>
 
 </div> 
