--- a/src/pages/installation/smf_overview.html
+++ b/src/pages/installation/smf_overview.html
@@ -20,10 +20,9 @@ install: smf
             <ul >
                 <li>Step 1 - Create AWS Organization
                     <ul>
-                        <li>1.1 Configure Management Workstation</li>
+                        <li>1.1 Create GitHub Account and Configure Management Workstation</li>
                         <li>1.2 Create AWS Management Account </li>
                         <li>1.3 Create AWS Organization</li>
-                        <li>1.4 Create GitHub Account(s) - one may be all you need but multiple GitHub Accounts may be used</li>
                     </ul>
                 </li>
                 <br>
