--- a/src/pages/tutorial/tutorial_smf_create_pr.html
+++ b/src/pages/tutorial/tutorial_smf_create_pr.html
@@ -6,7 +6,19 @@ tutorial: smf
 ---
 {{> tutorial_menu}}
 <div class=lz-r-content>
-<h3>Create Pull Request</h3>
+<h3>3 Create Pull Request</h3>
+<ol>
+    <li><strong>Visual Studio IDE (Windows)</strong>
+        <ol type="a">
+            <li></li>
+        </ol>
+    </li>
+    <li><strong>GitHub UI</strong>
+        <ol type="a">
+            <li></li>
+        </ol>
+    </li>
+</ol>
 
 
 </div> 
