--- a/src/pages/installation/smf_create_github_acct.html
+++ b/src/pages/installation/smf_create_github_acct.html
@@ -82,7 +82,7 @@ install: smf
             </ol>
         </li>
         <br>
-       <li>Generate a Personal Access token:
+       <li>Generate a Personal Access Token (PAT):
            <ol type="a">
                <li>Log into your GitHub personal account.</li>
                <li>Click on the user profile icon in the upper right of the page. The user profile menu appears.</li>
