--- a/src/pages/installation/smf_overview.html
+++ b/src/pages/installation/smf_overview.html
@@ -18,9 +18,9 @@ install: smf
             <p>Follow these steps to prepare the SMF for your team to start performing the LazyStack Tutorials.
             </p>
             <ul >
-                <li>Step 1 - Create AWS Organization
+                <li>Step 1 - Create Organization
                     <ul>
-                        <li>1.1 Create GitHub Account and Configure Management Workstation</li>
+                        <li>1.1 Create GitHub Organization and Configure Management Workstation</li>
                         <li>1.2 Create AWS Management Account </li>
                         <li>1.3 Create AWS Organization</li>
                     </ul>
