--- a/src/pages/installation/smf_create_org_overview.html
+++ b/src/pages/installation/smf_create_org_overview.html
@@ -6,7 +6,7 @@ install: smf
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h4>SMF Step 1 - Create AWS Org Overview</h4>
+    <h4>SMF Step 1 - Create Organization Overview</h4>
     <dl>
         <dt>Prerequisites:</dt>
         <dd>- A workstation with internet access and permissions to install software</dd>
@@ -14,11 +14,16 @@ install: smf
         <dt>Estimated Cost: none</dt> 
         <dt>Perform this step on the Management Workstation.</dt>
     </dl>
+    <h5>GitHub Organization and AWS Organization</h5>
+    <p>LazyStack configures a GitHub Organization and an AWS Organization. Integrations 
+        are provided that make collaboration on the development and deployment of AWS 
+        Serverless Stacks simple.</p>
+
 
     <h5>Management Workstation</h5>
 
-    <p>This is the computer from which you will be creating/managing your AWS 
-        Organization and Accounts. You must have administrative rights on this 
+    <p>This is the computer from which you will be creating/managing your GitHub Organization, AWS 
+        Organization, and Accounts. You must have administrative rights on this 
         computer to install and use a variety of software.</p>
 
    <h5>Names are Important</h5>
@@ -58,7 +63,7 @@ install: smf
     </ul>
 
     <h5>OrgCode</h5>
-        <p> Throughout the SMF process we use an organization prefix, the OrgCode, 
+        <p> Throughout the SMF process we use an AWS organization prefix, the OrgCode, 
         in the AWS Management Account name, Developer Account names, and AWS organizational Unit names.
         For instance, we refer to the AWS Management account as "OrgMgmt", but expect you to replace 
         the "Org" with your own short OrgCode. It must be alpha-numeric and have no spaces. This short OrgCode will be very helpful in keeping track of accounts belonging to different organizations should you end up managing or developing in more than one organization on the same Workstation 
@@ -100,9 +105,12 @@ install: smf
         <p>* Note: There many be more than one development account so we append the 
             developers "handle" to the account name; ex: IscDevJoe.
         </p>
+        <p>Your GitHub Organization can be named anyway you like. You may use an existing 
+            GitHub Organization instead of creating one from scratch.
+        </p>
         
     <h5>SysCode</h5>
-    <p>Your organization may have one or more systems and each of these systems may 
+    <p>Your AWS organization may have one or more systems and each of these systems may 
         contain one or more serverless stacks. You create accounts for systems under the 
         Test Organizational Unit and Production Organizational Unit. Each System has 
         one System Test AWS Account and one System Production AWS Account.
