--- a/src/pages/installation/smf_create_github_acct.html
+++ b/src/pages/installation/smf_create_github_acct.html
@@ -46,7 +46,7 @@ install: smf
     <ol>
        <li>Visit <a href="https://github.com/join" {{> newtab}}>Join GitHub</a> to create a GitHub Account if you don't already have one.</li>
        <br>
-        <li>Log in to your GitHub Account and create an <a href="https://docs.github.com/en/organizations" {{>newtab}}>Organization</a> if you don't already have one.</li>
+        <li>Log in to your GitHub Account and create an <a href="https://docs.github.com/en/organizations/collaborating-with-groups-in-organizations/creating-a-new-organization-from-scratch" {{>newtab}}>Organization</a> if you don't already have one.</li>
         <br>
         <li>Install "gh" as described here <a href="https://github.com/cli/cli#installation">here</a>.</li>
         <br>
