--- a/src/pages/installation/smf_create_org_overview.html
+++ b/src/pages/installation/smf_create_org_overview.html
@@ -17,7 +17,8 @@ install: smf
     <h5>GitHub Organization and AWS Organization</h5>
     <p>LazyStack configures a GitHub Organization and an AWS Organization. Integrations 
         are provided that make collaboration on the development and deployment of AWS 
-        Serverless Stacks simple.</p>
+        Serverless Stacks simple. You may create a GitHub Account and Organization 
+        or configure an existing GitHub Account and Organization.</p>
 
 
     <h5>Management Workstation</h5>
