--- a/src/pages/installation/smf_overview.html
+++ b/src/pages/installation/smf_overview.html
@@ -20,7 +20,8 @@ install: smf
             <ul >
                 <li>Step 1 - Create Organization
                     <ul>
-                        <li>1.1 Create GitHub Organization and Configure Management Workstation</li>
+                        <li>1.1 Create GitHub Organization and Configure Management Workstation (
+                        You may use an existing GitHub Organization)</li>
                         <li>1.2 Create AWS Management Account </li>
                         <li>1.3 Create AWS Organization</li>
                     </ul>
