--- a/src/pages/installation/smf_create_dev_acct.html
+++ b/src/pages/installation/smf_create_dev_acct.html
@@ -21,7 +21,7 @@ install: smf
     </p>
     <ol>
         <li>Open a PowerShell terminal.</li>
-        <li>CD into the OrgMgmt folder. Replace "Org" with your OrgCode.</li>
+        <li>CD into the LazyStackSMF folder.</li>
         <li>Execute the Dev_Account_Create.ps1 script:
             <pre><code class="language-bashshell">. .\Dev_Account_Create.ps1</code></pre>
                     Here is a script run with sample inputs:
