--- a/src/pages/installation/smf_create_org.html
+++ b/src/pages/installation/smf_create_org.html
@@ -19,7 +19,7 @@ install: smf
     </p>
     <ol>
         <li>Open a PowerShell terminal.</li>
-        <li>CD into the OrgMgmt folder. Replace "Org" with your OrgCode.</li>
+        <li>CD into the LazyStackSMF folder.</li>
         <li>Issue the following command:
             <pre><code class="language-bashshell">. .\Org_Create.ps1</code></pre>
             You will be prompted for your OrgCode and confirmation of the AWS CLI Profile to use.
