--- a/src/pages/installation/smf_overview.html
+++ b/src/pages/installation/smf_overview.html
@@ -8,13 +8,13 @@ install: smf
 <div class="lz-r-content manual-list">
     <h3>Configure LazyStack Software Management Framework (SMF)</h4>
 
-        <p>The LazyStack SMF provides an end-to-end Software Management Framework integrating AWS Services, GitHub and the 
+        <p>The LazyStack SMF provides an end-to-end Software Management Framework integrating AWS Services, GitHub Services, and
             LazyStack developer tools. Take a close look at the diagram below, we will be following the SMF Setup Steps create 
-            your first AWS Organization. 
+            your first Organization consisting of an integrated AWS Organization and GitHub Organization. 
         </p>
         <img src="/assets/img/LazyStackSMFSetup.svg" width="100%">
         <p></p>
-            <h4>Configuring your AWS Organization</h4>
+            <h4>Configuring your Organization</h4>
             <p>Follow these steps to prepare the SMF for your team to start performing the LazyStack Tutorials.
             </p>
             <ul >
