--- a/src/pages/installation/smf_test_cicd.html
+++ b/src/pages/installation/smf_test_cicd.html
@@ -59,8 +59,9 @@ Enter your AWS CLI Management Account Profile (default: AzMgmt):
 Enter Region (default us-east-1):
 Enter the SysCode (ex: Pet):Tut
 Enter the System Test Account Name (default: AzTutTest):
-Enter the application stack's GitHub Repo URL (example: https://github.com/myorg/myrepo.git): https://github.com/myorg.OrgDevJoePetStore.git
+Enter the application stack's GitHub Repo URL (example: https://github.com/myorg/myrepo.git): https://github.com/myorg/OrgDevJoePetStore.git
 Enter your repo short name (default: orgdevjoepetstore):
+Enter your LazyStackSmfUtil stack's GitHub Repo URL (example: https://github.com/myorg/LazyStackSmfUtil.git): https://github.com/myorg/LazyStackSmfUtil.git
 Enter PR Create template name (default: Test_CodeBuild_PR_Create.yaml)
 Enter PR Merge template name (default: Test_CodeBuild_PR_Merge.yaml)
 
@@ -72,6 +73,7 @@ Please Test and confirm the following:
     System Test Account name: AzTutMgmt
     GitHub Repo URL: https://github.com/myorg.OrgDevJoePetStore.git
     Repo short name: orgdevjoepetstore
+    
     CodeBuild PR Create project stack name: orgdevjoepetstore_pr_create
     CodeBuild PR Create project template: Test_CodeBuild_PR_Create.yaml
     CodeBuild PR Merge project stack name: orgdevjoepetstore_pr_merge
