--- a/src/pages/installation/smf_create_mgmt_acct.html
+++ b/src/pages/installation/smf_create_mgmt_acct.html
@@ -58,8 +58,8 @@ install: smf
                 <li>Click the <strong>Next: Review</strong> button. The Add user (step 4) page appears.</li>
                 <li>Click the <strong>Create user</strong> button. The Add user (step 5) page appears.</li>
                 <li>Click the <strong>Download .csv</strong> button.</li>
-                <li>Rename the "new_user_credentials.csv" file to "OrgMgmt_credentials.csv" and 
-                    move it to the "OrgMgmt" folder. Replace "Org" with your OrgCode.
+                <li>Rename the "new_user_credentials.csv" file to "OrgMgmt_credentials.csv". Replace "Org" with your OrgCode.</li>
+                <li>Move the file to the LazyStackSMF folder. 
                 </li>
                 <li>Click the <strong>Close</strong> button. The IAM console appears.</li>
             </ol>
@@ -75,7 +75,7 @@ install: smf
         <li>Create OrgMgmt AWS CLI Profile
             <ol type="a">
                 <li>Open PowerShell terminal</li>
-                <li>CD into the "OrgMgmt" folder. Replace "Org" with your OrgCode.</li>
+                <li>CD into the LazyStackSMF folder.</li>
                 <li>Issue the following command: (replacing "Org" with your OrgCode)
                     <pre><code class="language-bashshell">aws configure import --csv file://OrgMgmt_credentials.csv</code></pre>
                     This creates the OrgMgmt profile.
