--- a/src/pages/installation/smf_create_prod_acct.html
+++ b/src/pages/installation/smf_create_prod_acct.html
@@ -39,7 +39,7 @@ install: smf
     <h5>Steps</h5>
     <ol>
         <li>Open a PowerShell Terminal.</li>
-        <li>CD into the OrgMgmt folder. Using your OrgCode in place of "Org".</li>
+        <li>CD into the LazyStackSMF folder.</li>
         <li>Execute the Prod_Account_Create.ps1 script:
              <pre><code class="language-bashshell">. .\Prod_Account_Create.ps1</code></pre>
                      Here is a script run with sample inputs:
@@ -80,9 +80,9 @@ install: smf
         </li>
         <li>Configure Account to User GitHub Personal Access Tokens
             <ol type="a">
-                <li>Enter the following command:
-                    <pre><code class="language-bashshell">aws codebuild import-source-credentials --server-type GITHUB --auth-type PERSONAL_ACCESS_TOKEN --profile OrgSysProdAccessRole --token githubtoken </code></pre><br>
-                    Replace "OrgSys" and "githubtoken" with your values.
+                <li>Enter the following command, replacing "OrgSys" and "githubtoken" with your values.:
+                    <pre><code class="language-bashshell">aws codebuild import-source-credentials --server-type GITHUB --auth-type PERSONAL_ACCESS_TOKEN --profile OrgSysProdAccessRole --token githubtoken </code></pre>
+                    
                 </li>
             </ol>
         </li>        
