--- a/src/pages/installation/smf_create_stack.html
+++ b/src/pages/installation/smf_create_stack.html
@@ -14,7 +14,10 @@ install: smf
         <dt>Perform this step on the Management Workstation.</dt>
     </dl>
     <p>In this step you configure one or more GitHub Repositories for your system. Each 
-        repository defines a serverless stack.
+        repository defines a serverless stack. We suggest you configure one tutorial 
+        repository for each developer who will be performing the LazyStack Tutorial. The 
+        following steps will demonstrate this by creating a serverless stack repo for 
+        the "OrgDevJoe" developer you created earlier.
     </p>
     <ul>
         <li>4.1 Create GitHub Repository for Serverless Stack</li>
@@ -22,7 +25,5 @@ install: smf
         <li>4.3 Configure System Production Account for Continuous Deployment</li>
     </ul>
 
-    <p><strong>Note: If you do not yet have a stack to define you can stop the SMF
-        setup here and come back to this step later. For instance, the LazySTack SMF Tutorial 
-        will direct you to this step when creating a new serverless stack.</strong></p>
+
 </div>
