--- a/src/pages/installation/smf_create_org.html
+++ b/src/pages/installation/smf_create_org.html
@@ -48,7 +48,7 @@ install: smf
             <ul>
                 <li>AWS Management Account doesn't have appropriate permissions. This can happen when 
                     you are using an existing account instead of creating one from scratch using the 
-                    our setup instructions.
+                    the setup instructions in SMF Step 3.
                 </li>
                 <li>You have exceeded the maximum number of accounts allowed in the AWS Organization. 
                     By default, AWS sets this maximum at 4. You may request additional accounts. If 
@@ -60,7 +60,7 @@ install: smf
                     account, the account creation process will fail.
                 </li>
             </ul>
-            <p>For more details on how this script works, visit the <a href=""{{>newtab}}>LazyStackSMF Script</a> 
+            <p>For more details on how this script works, visit the <a href="/userguide/smf_lzconfigure.html"{{>newtab}}>LazyStackSMF Script</a> 
                 User Guide section.
             </p>            
             <br>
