--- a/src/pages/userguide/smf_lzdeploypipeline.html
+++ b/src/pages/userguide/smf_lzdeploypipeline.html
@@ -8,23 +8,46 @@ topic: smf
     <h3>LzDeployPipeline Script</h3>
     <p>The LzDeployPipeline.ps1 PowerShell script is run on the Management Workstation to 
         deploy a specific CodeBuild project. This is required after you make changes to 
-        
+        a CodeBuild project template file.
     </p>
 
-    <h5>IAMUserCredsPolicy.json</h5>
-    <p>This policy grants the developer those permissions typically required to publish 
-        Serverless Stacks to their AWS Sandbox Account. Use the LzUpdateDevCreds.ps1  
-        script to update the policy for an existing developer's account when you make changes
-        to the local IAMUserCredsPolicy.json document.
+    <h5>CodeBuild project template files</h5>
+    <p>The Tutorial system used three CodeBuild project template files located in the 
+        LazyStackSMF folder:
+    </p>
+    <ul>
+        <li>Test_CodeBuild_PR_Create.yaml</li>
+        <li>Test_CodeBuild_PR_Merge.yaml</li>
+        <li>Prod_CodeBuild_PR_Merge.yaml</li>
+    </ul>
+
+    <p>It is common practice to copy and rename these files into your LazyStackSettings folder and 
+        then edit the BuildSpec section of the template to implement specific build, test and 
+        deploy functionality for your stacks. 
     </p>
 
-    <h5>Running the LzUpdateDevCreds Script</h5>
+    <h5>Running the LzDeployPipeline Script</h5>
     <ol>
         <li>Open a PowerShell terminal</li>
         <br>
         <li>CD into your LazyStackSettings folder.</li>
         <br>
-        <li><pre><code class="language-bashshell">..\LazyStackSMF\LzUpdateDevCreds.ps1</code></pre></li>
+        <li><pre><code class="language-bashshell">..\LazyStackSMF\LzDeployPipeline.ps1</code></pre></li>
     </ol>
 
-</div>                
+    <h5>Deploy all Pipelines</h5>
+    <p>Run the LzConfigure script to deploy all pipelines. Each pipeline project is defined in a AWS 
+        Cloud Formation template. LzConfigure uses CLI SAM to deploy these templates. Cloud Formation 
+        checks if the template being deployed is different from the one currently deployed and skips 
+        the deployment if the Pipeline project is already deployed.
+    </p>
+
+    <h5>CodeBuild instead of CodePipeline</h5>
+    <p>We are using AWS CodeBuild to implement CI/CD. AWS also offers AWS CodePipeline. AWS CodePipeline 
+        offer additional features that are unnecessary for this SMF design. They can be implemented if 
+        desired and a CodePipeline project can, in large part, reuse the CodeBuild projects defined in this 
+        SMF design. For most Serverless Stack applications, the simpler CodeBuild projects are all that 
+        is needed.
+    </p>
+
+</div> 
