update LazyStackSmfUtil creation

--- a/src/pages/installation/smf_config_mgmt_workstation.html
+++ b/src/pages/installation/smf_config_mgmt_workstation.html
@@ -67,7 +67,8 @@ install: smf
                     Follow the instructions to authenticate your workstation with GitHub
                 </li>
                 <li>Issue this gh command:
-                    <pre><code class="language-bashshell">gh repo fork InSciCo/LazyStackSMF --clone=true</code></pre>
+                    <pre><code class="language-bashshell">
+gh repo create GitHubOrgName/LazyStackSmfUtil --private --confirm --template InsSciCo/LazyStackSmfUtil  </code></pre>
                     A LazyStackSMF folder is created containing a clone of the LazyStackSMF repository and a repository
                     called LazyStackSMF is created under your GitHub Organization.
                 </li>
