--- a/src/pages/installation/smf_config_mgmt_workstation.html
+++ b/src/pages/installation/smf_config_mgmt_workstation.html
@@ -58,19 +58,25 @@ install: smf
         <li>Select the "common" folder that will contain the LazyStackSMF folder and LazyStackSettings folder. <br>On a 
             Windows machine this might be C:\Users\User\source\repos.</li>
         <br>
-        <li>Fork the InSciCo/LazyStackSMF project
+        <li>Clone the InSciCo/LazyStackSMF project
             <ol type="a">
                 <li>Open a PowerShell Terminal</li>
                 <li>CD into the "common" folder.</li>
-                <li>Issue this gh command:
+                <li>Issue this git command:
+                    <pre><code class="language-bashshell">git clone https://github.com/InSciCo/LazyStackSMF.git  </code></pre>
+                    A LazyStackSMF folder is created containing a clone of the LazyStackSMF repository.
+                </li>
+            </ol>
+        </li>
+        <br>
+        <li>Create the InSciCo/LazyStackSmfUtil project
+            <ol type="a">
+                <li>Using the same PowerShell terminal opened in the previous step, issue this gh command:
                     <pre><code class="language-bashshell">gh auth login</code></pre>
                     Follow the instructions to authenticate your workstation with GitHub
                 </li>
                 <li>Issue this gh command (edit the GitHubOrgName):
-                    <pre><code class="language-bashshell">
-gh repo create GitHubOrgName/LazyStackSmfUtil --private --confirm --template InsSciCo/LazyStackSmfUtil  </code></pre>
-                    A LazyStackSMF folder is created containing a clone of the LazyStackSMF repository and a repository
-                    called LazyStackSMF is created under your GitHub Organization.
+                    <pre><code class="language-bashshell">gh repo create GitHubOrgName/LazyStackSmfUtil --private --confirm --template InsSciCo/LazyStackSmfUtil </code></pre>
                 </li>
             </ol>
         </li>
