--- a/src/pages/installation/smf_config_mgmt_workstation.html
+++ b/src/pages/installation/smf_config_mgmt_workstation.html
@@ -69,7 +69,7 @@ install: smf
             </ol>
         </li>
         <br>
-        <li>Create the InSciCo/LazyStackSmfUtil project
+        <li>Create the LazyStackSmfUtil and PetStore project in your GitHubOrg
             <ol type="a">
                 <li>Using the same PowerShell terminal opened in the previous step, issue this gh command:
                     <pre><code class="language-bashshell">gh auth login</code></pre>
@@ -78,6 +78,10 @@ install: smf
                 <li>Issue this gh command (edit the GitHubOrgName):
                     <pre><code class="language-bashshell">gh repo create GitHubOrgName/LazyStackSmfUtil --private --confirm --template InsSciCo/LazyStackSmfUtil </code></pre>
                 </li>
+                <li>Issue this gh command (edit the GitHubOrgName):
+                    <pre><code class="language-bashshell">gh repo create GitHubOrgName/PetStore --private --confirm --template InsSciCo/PetStore </code></pre>
+                </li>
+
             </ol>
         </li>
         <br>
