--- a/src/pages/intro/intro_techoverviewsmf.html
+++ b/src/pages/intro/intro_techoverviewsmf.html
@@ -7,9 +7,11 @@ intro: tech
 {{> intro_menu}}
 <div class=lz-r-content>
     <h3>LazyStack AWS Software Management Framework</h4>
-        <p> The LazyStack SMF implements Git Feature Branch Workflow with 
-            GitHub Pull Requests driving Continuous Integration and Continuous Deployment of Review 
-            and Production AWS Stacks. Here is the workflow for setting up the SMF.
+        <p>The LazyStack SMF provides an end-to-end Software Management Framework integrating AWS Services, GitHub Services, and LazyStack developer tools. A configured SMF Organization looks like this: </p>
+        <img src="/assets/img/LazyStackSMFSetup_2.svg" width="700">
+        <p></p>
+        <p> We provide clear documentation for setting up the SMF and automate much of that process 
+            with PowerShell scripts. The diagram below outlines the SMF Setup.
         </p>
         <img src="/assets/img/LazyStackSMFSetup.svg" width="700">
         <p></p>
