--- a/src/pages/installation/installation_awsdepguide.html
+++ b/src/pages/installation/installation_awsdepguide.html
@@ -23,7 +23,6 @@ install: smf
             <li>2. Use Cases:
                 <ul>
                     <li>2.1 Use Case: Install SMF<br>
-
                         <ul>Prerequisites:
                             <li>
                                 <ul>
@@ -58,6 +57,7 @@ install: smf
                                             <li>1.2 Create GitHub Organization</li>
                                             <li>1.3 Install Git client</li>
                                             <li>1.4 Install "gh" (GitHub CLI)</li>
+                                            <li>1.4 Create Petstore and LazyStackSmfUtil repositories</li>
                                         </ul>
                                     </li>
                                     <li>SMF 2) Configure Workstation
@@ -65,7 +65,7 @@ install: smf
                                             <li>2.1 Install PowerShell</li>
                                             <li>2.2 InstALL powershell-yaml</li>
                                             <li>2.3 Select "common" folder</li>
-                                            <li>2.4 For InSciCo/LazyStackSMF</li>
+                                            <li>2.4 Clone InSciCo/LazyStackSMF</li>
                                             <li>2.5 Create LazyStack Settings Folder</li>
                                             <li>2.6 Generate GitHub Personal Access Tokens</li>
                                         </ul>
