--- a/src/pages/installation/smf_config_mgmt_workstation.html
+++ b/src/pages/installation/smf_config_mgmt_workstation.html
@@ -41,17 +41,15 @@ install: smf
                     <p>Run the following commands in the PowerShell terminal</p>
                     <pre><code class="language-bashshell"></code>Get-PackageSource</pre>
                     <p>If you don't see PSGallery listed in the Package Sources, issue the following command</p>
-                    <pre><code class="language-bashshell"></code>Register-PSRepository -Name PSGallery -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted</pre>
+                    <pre><code class="language-bashshell"></code>Register-PSRepository -Default -InstallationPolicy Trusted</pre>
+                    If your computer is behind a company proxy you might get a message indicating the gallery source can't be reached. 
+                    Sometimes you can get around this by launching IE (which establishes proxy credentials) and then issuing the following command in the terminal:
+                    <pre><code class="language-bashell"></code>(New-Object -TypeName System.Net.WebClient).Proxy.Credentials = [System.Net.CredentialCache]::DefaultNetworkCredentials</pre>
+                    Then try the Register-PSRepository command again and if it works, issue the following command:
+                    <pre><code class="language-bashshell">Install-Module powershell-yaml</code></pre>
+                    
                 </li>
-                <li>PowerShellGet provider
-                    <pre><code class="language-bashshell"></code>Get-PackageProvider</pre>
-                    <p>If you don't see PowerShellGet listed as a provider, run the following command</p>
-                    <pre><code class="language-bashshell"></code>Install-PackageProvider -Name PowerShellGet -Force</pre>
-                </li>
-                <li>Powershell-Yaml
-                    <pre><code class="language-bashshell"></code>Install-Module powershell-yaml </pre>
-                </li>
-    
+
             </ol>
         </li>      
         <br>
