fixed typo in install

--- a/src/pages/installation/smf_create_github_acct.html
+++ b/src/pages/installation/smf_create_github_acct.html
@@ -61,15 +61,15 @@ install: smf
         <br>
         <li>Create the LazyStackSmfUtil and PetStore project in your GitHubOrg
             <ol type="a">
-                <li>Open a PowerShell terminal and issue this gh command:
+                <li>Open a command terminal and issue this gh command:
                     <pre><code class="language-bashshell">gh auth login</code></pre>
                     Follow the instructions to authenticate your workstation with GitHub
                 </li>
                 <li>Issue this gh command (edit the GitHubOrgName):
-                    <pre><code class="language-bashshell">gh repo create GitHubOrgName/LazyStackSmfUtil --private --confirm --template InsSciCo/LazyStackSmfUtil </code></pre>
+                    <pre><code class="language-bashshell">gh repo create GitHubOrgName/LazyStackSmfUtil --private --confirm --template InSciCo/LazyStackSmfUtil </code></pre>
                 </li>
                 <li>Issue this gh command (edit the GitHubOrgName):
-                    <pre><code class="language-bashshell">gh repo create GitHubOrgName/PetStore --private --confirm --template InsSciCo/PetStore </code></pre>
+                    <pre><code class="language-bashshell">gh repo create GitHubOrgName/PetStore --private --confirm --template InSciCo/PetStore </code></pre>
                 </li>
             </ol>
         </li>
