--- a/src/pages/installation/smf_create_dev_acct.html
+++ b/src/pages/installation/smf_create_dev_acct.html
@@ -39,7 +39,7 @@ install: smf
         <li>CD into the LazyStackSMF folder.</li>
         <br>
         <li>Execute the LzNewDevAcct.ps1 script:
-            <pre><code class="language-bashshell">..\LazyStackSMF\LzNewDevAcct.ps1</code></pre>
+            <pre><code class="language-bashshell">..\LazyStackSMF\LzNewDevAccount.ps1</code></pre>
                     Here is a script run with sample inputs:
                     <pre><code class="language-bashshell">
 Dev_Account_Create.ps1 - V1.0.0
