--- a/src/pages/installation/smf_create_mgmt_acct.html
+++ b/src/pages/installation/smf_create_mgmt_acct.html
@@ -29,6 +29,8 @@ install: smf
             create an email alias to create another AWS account. You can't use the same email address with 
             more than one AWS Account.<br><br>
 
+        <li>Go to your email and use the email AWS sent you to confirm your email Address.</li>
+        <br>
         <!-- Sign In-->
         <li><a href="http://signin.aws.amazon.com/console" {{>newtab}}>Sign into</a> your AWS 
             Management Console as Root user. The AWS Management Console appears.
@@ -64,6 +66,7 @@ install: smf
                 </li>
                 <li>Click the <strong>Close</strong> button. The IAM console appears.</li>
             </ol>
+        <br>
         <li>Sign out of your AWS Management Account.</li>
         <br>
         <!-- Install the AWS CLI-->
