--- a/src/pages/installation/smf_create_org.html
+++ b/src/pages/installation/smf_create_org.html
@@ -8,7 +8,7 @@ install: smf
 <div class=lz-r-content>
     <h4>Steps 4) Create AWS Organization</h4>
     <dl>
-        <dt>Prerequisites: AWS Mgmt. Account Setup Complete</dt>
+        <dt>Prerequisites: AWS Management Account Setup Complete</dt>
         <dt>Estimated Time: 5 minutes</dt>
         <dt>Estimated Cost: none</dt>
         <dt>Perform this step on the Management Workstation.</dt>
@@ -65,13 +65,74 @@ install: smf
             </p>            
             <br>
             Here is an example of running the script:
-            <pre><code class="language-bashshell">todo script transcript
-</code></pre>
-        </li>
-    </ol>
-    <h5>Step Summary</h5>
-    <p>In this step we created our AWS Organization, AWS Organizational Units, 
-        and AWS Tutorial System Accounts with CI/CD pipelines.
-    </p>
+            <pre><code class="language-bashshell">LzConfigure.ps1 V1.0.0
+Use this script to setup and manage your LazyStackSMF Organization
+Creating new SMF settings file:
+   Please enter OrgCode: LzStk
+   Enter AWS CLI Managment Account (default: LzStkMgmt):
+   Enter AWS Region (us-east-1):
+   Enter your GitHub Management Acct Name: LzStkAdmin
+   Enter your GitHub Organization Name: LzStk
+   Tutorial Repo (default: https://github.com/LzStk/Petstore.git):
+   LazyStack Util Repo (default: https://github.com/LzStk/LazyStackSmfUtil.git):
+OrgCode: LzStk
+AWS Management Account: LzStkMgmt
+Checking AWS Configuration
+  - No AWS Organization Found for the LzStkMgmt account.
+  - We need to create one to continue installation.
+  Create AWS Organization? (Y/n): y
+  - AWS Organization Created for the LzStkMgmt account.
+  - AWS OrgUnits
+    - Creating OrgUnit DevOU
+    - Creating OrgUnit TestOU
+    - Creating OrgUnit ProdOU
+
+  - Systems
+    - System: Tut (Tutorial System)
+      - Accounts
+        - Account: LzStkTutTest
+          Note: An email address can only be associated with one AWS Account.
+          Enter unique email for Test System Account: LzStkTutTest@LzStk.net
+          - Creating System Account: LzStkTutTest
+          - Checking for successful account creation. TryCount=1
+          - LzStkTutTest account creation successful. AccountId: 541943406928
+          - Moving LzStkTutTest account to Test Organizational Unit
+          - Adding or Updating LzStkTutTestAccessRole profile and associating it with the LzStkMgmt profile.
+          - Creating Administrators group in the LzStkTutTest account.
+          - Adding AdministratorAccess Policy to Administrators group
+          - Creating IAM User LzStkTutTestIAM in LzStkTutTest account.
+          - Writing the IAM User Credentials into LzStkTutTestIAM_credentials.txt
+          - Adding IAM User LzStkTutTestIAM to the LzStkTutTest Account Administrators group.
+          - Updating AWS CodeBuild GitHub Credentials
+
+
+        - Account: LzStkTutProd
+          Note: An email address can only be associated with one AWS Account.
+          Enter unique email for Prod System Account: LzStkTutProd@LzStk.net
+          - Creating System Account: LzStkTutProd
+          - Checking for successful account creation. TryCount=1
+          - LzStkTutProd account creation successful. AccountId: 630416782635
+          - Moving LzStkTutProd account to Prod Organizational Unit
+          - Adding or Updating LzStkTutProdAccessRole profile and associating it with the LzStkMgmt profile.
+          - Creating Administrators group in the LzStkTutProd account.
+          - Adding AdministratorAccess Policy to Administrators group
+          - Creating IAM User LzStkTutProdIAM in LzStkTutProd account.
+          - Writing the IAM User Credentials into LzStkTutProdIAM_credentials.txt
+          - Adding IAM User LzStkTutProdIAM to the LzStkTutProd Account Administrators group.
+          - Updating AWS CodeBuild GitHub Credentials
+
+Deploy Pipelines? (Y/n):
+PipeLine Deployments
+  - Pipeline: Test_PR_Create in Account  Test
+... 
+  - Pipeline: Test_PR_Merge in Account  Test
+...
+  - Pipeline: Prod_PR_Merge in Account  Prod</code></pre>
+</li>
+</ol>
+<h5>Step Summary</h5>
+<p>In this step we created our AWS Organization, AWS Organizational Units, 
+and AWS Tutorial System Accounts with CI/CD pipelines.
+</p>
 
 </div>
