--- a/src/pages/intro/intro_smf.html
+++ b/src/pages/intro/intro_smf.html
@@ -6,7 +6,7 @@ intro: business
 ---
 {{> intro_menu}}
 <div class=lz-r-content>
-    <h3>Coordinate with LazyStack SMF</h3>
+    <h3>Collaborate with LazyStack SMF</h3>
     <p>LazyStack Software Management Framework (SMF) provides a complete end-to-end software development management 
         tool-chain tailored to and integrated seamlessly with AWS and GitHub.
     </p>
