--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,12 +2,13 @@
 layout: default
 section: Homepage
 ---
-<div id="static-bg" style="position:fixed; top:300px;z-index: initial;">
-    <img id="biker" src="/assets/img/pic1.jpg" style="width: 100vw;height: 100vh;object-fit:cover;z-index:initial;max-width: 1500px;">
+<div id="static-bg" style="position:fixed; top:200px;z-index: initial;">
+    <img id="biker" src="/assets/img/pic1.jpg" 
+        style="width: 100vw;height: 100vh;object-fit:cover;z-index:initial;max-width: 1200px;">
     <div id="bg-fill-cont-1" style="z-index:1;position:absolute;top:0px;">
-        <div id:="bg-fill-1" style="background-image: linear-gradient(#181525,#443d6e);min-height:160px;width:100vw;max-width: 1500px;">
+        <div id:="bg-fill-1" style="background-image: linear-gradient(#181525,#443d6e);min-height:160px;width:100vw;max-width: 1200px;">
         </div>
-        <div id="pinstripe-2" style="background-color:#221C1C;height:10px;width:100vw;max-width: 1500px;">
+        <div id="pinstripe-2" style="background-color:#221C1C;height:10px;width:100vw;max-width: 1200px;">
         </div>
     </div>
 </div>
@@ -26,7 +27,7 @@ section: Homepage
             justify-content: center;
             position: relative;
             z-index: 4;
-            max-width:1500px;">
+            max-width:1200px;">
         <img id="vista" 
             src="/assets/img/pic12.jpg" 
             style=
@@ -35,7 +36,7 @@ section: Homepage
                 width: 100%;
                 object-fit: cover;
                 object-position: 50% 10%;
-                max-width: 1500px;">
+                max-width: 1200px;">
         </img>
 
         <div style=
@@ -58,10 +59,22 @@ section: Homepage
 
     </div>
     
-    <div id="sitemenu-cont" style="position: sticky;top: 0px;z-index: 3;">
-        <div id="pinstripe-1" style="background-color:#d5dbdb;border-top:#221C1C solid 6px;border-bottom:#221C1C solid 6px;;height:15px;width:100vw;position: relative;z-index: inherit; max-width: 1500px;"></div>
-        <div class="index">
-            {{> sitemenu}}
+    <div id="sitemenu-cont" 
+        style="position: sticky; 
+            top: 0px;z-index: 3;">
+        <div id="pinstripe-1" 
+            style="background-color:#d5dbdb;
+            border-top:#221C1C solid 6px;
+            border-bottom:#221C1C solid 6px;
+            height:15px;
+            width:100vw;
+            position: relative;
+            z-index: inherit; 
+            max-width: 1200px;"></div>
+        <div style="height: 100px; max-width:1200px;" align="center">
+            <a href="/intro/intro.html">
+                <img src="/assets/img/docs.svg" style="object-fit: 'cover'; height: 100%;">
+                Let's Get Started!</a>
         </div>
     </div>
 
@@ -73,7 +86,7 @@ section: Homepage
         <div id=cardflex style="position:sticky; top:48px; display:flex; flex-direction:row;
             justify-content:space-around; align-items:center; flex-wrap: wrap;
             min-height:100px; width:100vw;
-            z-index:2; margin-bottom: 0px; max-width: 1500px;">
+            z-index:2; margin-bottom: 0px; max-width: 1200px;">
             <div id="card-1" class="card" style="height: 420px; ">
                 <h4>Collaborate</h4>
                 <img class="card-image" style="object-position:0% 0%" src="/assets/img/pic10.jpg">
@@ -115,7 +128,12 @@ section: Homepage
     </div>
 
     <div id=big-content-2 style="position: relative;z-index: 2;">
-        <div id=spacer style="min-height:350px; position: sticky; top:100px; padding: 0vh 3vw 6vh 2vw;">
+        <div id=spacer 
+            style="min-height:350px; 
+            position: sticky; 
+            top:100px; 
+            padding: 0vh 3vw 6vh 2vw;
+            max-width: 1100px;">
             <blockquote 
             style="position:relative; color: #d5dbdb; font-size: 20px; background-color: #3b103bda; 
             border-radius: 30px; margin-bottom: 0px; padding: 20px 15px 20px 30px">
