updates for APN compliance

--- a/src/pages/installation/smf_config_mgmt_workstation.html
+++ b/src/pages/installation/smf_config_mgmt_workstation.html
@@ -76,7 +76,8 @@ menu1: smf
             name if you are managing more than one SMF Organization on your management workstation.
         </li>
         <br>
-        <li>Generate Personal Access Tokens (PAT):
+        <li>Generate Personal Access Tokens (PAT), these tokens are used by LazyStack and AWS 
+            CodeBuild to connect to GitHub:
             <ol type="a">
                 <li>Log into your GitHub personal account.</li>
                 <li>Click on the user profile icon in the upper right of the page. The user profile menu appears.</li>
