--- a/src/pages/index5.html
+++ b/src/pages/index5.html
@@ -45,13 +45,11 @@ background-image: linear-gradient(#181525,#443d6e)
 
             <div class="cell small-12 medium-6 large-4 " align="center">
                 <div class="r2-card"
-                    style="background-image: url('/assets/img/pic10.jpg');">
+                    style="background-image: url('/assets/img/pic10.jpg');
+">
                     <div>
                         <span class="card-title">Collaborate</span><br>
                         <span class="card-text">Software Management Framework</span> 
-                    </div>
-                    <div class="card-blurb"><span>Give your team a quick start 
-                        with Continuous Integration and Continuous Deployment driven by GitHub Pull Requests.</span>
                     </div>
                 </div>
             </div>
@@ -63,24 +61,16 @@ background-image: linear-gradient(#181525,#443d6e)
                         <span class="card-title">Accelerate</span><br>
                         <span class="card-text">Model Driven Development</span>
                     </div >
-                    <div class="card-blurb"><span>Generate all the 
-                        "plumbing code" and configuration necessary to deploy AWS Serverless Application Stacks, and 
-                        client App libraries</span>
-                    </div>
                 </div>
             </div>
 
             <div class="cell small-12 medium-6 large-4" align="center">
                 <div class="r2-card"
-                    style="background-image: url('/assets/img/pic15.jpg');">
+                    style="background-image: url('/assets/img/pic12.jpg');">
                     <div>
                         <span class="card-title">Scale</span><br>
                         <span class="card-text">Serverless Computing</span>
                     </div>
-                    <div class="card-blurb"><span>Automatically scale your application 
-                        services based on client demand. Eliminate DevOps expense and only pay for services you use!</span>
-                    </div>
-
                 </div>
             </div>
             
