--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -44,7 +44,7 @@ background-image: linear-gradient(#181525,#443d6e)
         <div id="cards" class="cards grid-x grid-margin-y align-center" >
 
             <div class="cell small-12 medium-6 large-4 " align="center">
-                <div class="r2-card">
+                <div class="card">
                     <div class="card-header">
                         <span class="card-title">Collaborate</span><br>
                         <span class="card-text">Software Management Framework</span> 
@@ -59,7 +59,7 @@ background-image: linear-gradient(#181525,#443d6e)
             </div>
 
             <div class="cell small-12 medium-6 large-4" align="center">
-                <div class="r2-card">
+                <div class="card">
                     <div class="card-header">
                         <span class="card-title">Accelerate</span><br>
                         <span class="card-text">Model Driven Development</span>
@@ -75,7 +75,7 @@ background-image: linear-gradient(#181525,#443d6e)
             </div>
 
             <div class="cell small-12 medium-6 large-4" align="center">
-                <div class="r2-card">
+                <div class="card">
                     <div class="card-header">
                         <span class="card-title">Scale</span><br>
                         <span class="card-text">Serverless Computing</span>
