updated card backgrounds

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -27,13 +27,11 @@ background-image: linear-gradient(#181525,#443d6e)
             </div>
         </div>
 
-        <div class="grid-x align-center" 
+        <div class="grid-x align-center lets-go" 
             data-sticky
             data-top-anchor="head:bottom"
             data-margin-top="0"
             data-sticky-on="small"
-            style="height:50px;
-            background-image: linear-gradient(#181525,#443d6e)"
             >
             <a href="/intro/intro.html" style="margin-top: -22px; width:270px;">
                 <img src="/assets/img/docs.svg" style="object-fit: 'cover'; height: 100px;">
