--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -6,12 +6,11 @@ menu1: business
 
 <div class="lz-r-content">
     <h3>LazyStack Business Stakeholder Overview</h3>
-<p> LazyStack's mission is to enable technical entrepreneurs to quickly field mobile and web applications leveraging 
-    scalable cloud-based resources at the lowest initial cost, without sacrificing security, scalability or features.
-    LazyStack is a collection of technical best-practices, templates, configuration scrips and development tools. These 
-    technical details are covered extensively on this site. Before diving into that technical material, here are the 
-    high level value propositions of LazyStack.
+    <p>The AWS Services Infrastructure is vast and can be intimidating and costly to get started with. The objective of LazyStack SMF is to demystify the complexities of AWS services and security infrastructure by providing concrete implementations of these services and a prescriptive approach to using them to build AWS Serverless Applications. This reduces the technical risks and costs associated with adopting AWS as your Serverless Application cloud platform.
     </p>
+    <p>LazyStack SMF has extensive documentation that serves as a “blueprint” for a development shop wanting to get started with AWS/.NET serverless application development. The LazyStack SMF is comprised of PowerShell management scripts and CloudFormation templates that automate everything that can be automated in setting up and managing a comprehensive serverless stack development pipeline using AWS Services. LazyStack SMF also works seamlessly with our LazyStack Model Driven Development (MDD) tool.
+    </p>
+
 <img src="/assets/img/LazyStackMission.svg" width="100%">
 <p></p>
 <p>The LazyStack Software Management Framework (SMF) ensures your collaborative development process, test process, and production 
